    by country state in Customers/Search and filter them in 
    Customers/Reports/Customers List (alec)
  - in short customer nodes list added possibility to change node's 
    warning flag and status (alec)
  - in short customer nodes list added online status icon 
    with status title (alec)
  - helpdesk: in tickets list added short nodes list popup (alec)

version 1.11.4 Telchak (2008-08-07):

  - hosting: removed description column from domains list (alec)
  - hosting: added BCC (blind carbon copy) address in accounts (alec)
  - DB drivers: in postgresql driver added @-operator and changed 
    _driver_geterror() and _driver_disconnect() according to other 
    drivers (alec)
  - DB drivers: removed server version checking in mysql drivers (alec)
  - DB drivers: don't die when extension isn't loaded, trigger warning 
    instead (alec)
  - stop working when database connection errors occured (alec)
  - lmsd/hostfile: fixed skip_dev_ips (alec)
  - BTS#0000734: fixed problem with \r\n on pdf invoices (alec)
  - hosting: auto-select domain when clicking on New account on accounts list
    after domain filter was used (alec)
  - added Actions tab in Customer Info with cutoff suspending and warning 
    messages management as separate actions (alec)
  - Balance Sheet: fixed big memory usage problem and increased speed of 
    groups filtering (alec)
  - Invoices List: fixed big memory usage problem, increased speed of filtering
    by group and by value (alec)
  - invoicenote: we can change pay type (chilan)
  - lmsd/cutoff: added 'use_customerassignments' option (alec)
  - improved page navigation ergonomy in chooseip window (chilan)
  - added "disable network" functionality in LMSUI and lms-makedhcpconf (chilan)
  - added "trivial" vlan support in lms-makedhcpconf (chilan)
  - lmsd/dhcp: added "trivial" vlan support (alec)
  - tariffs: added possibility to clone tariffs data (alec)
  - don't overwrite invoice's creation time on edit if date wasn't 