@@ -144,7 +144,7 @@
 </TABLE>
 </P>
 {/if}
-{if $customer}
+{if $customerinfo}
 <P>
 <TABLE WIDTH="100%" CELLPADDING="3">
 	<TR CLASS="dark">
@@ -152,17 +152,22 @@
 			<IMG SRC="img/customer.gif" ALT=""> <B>{t}Customer:{/t}</B>
 		</TD>
 		<TD CLASS="fbt" WIDTH="1%" nowrap>
-			<B>{$customer.customername}</B> 
-			&nbsp;&raquo;&nbsp; {$customer.address} &nbsp; {$customer.zip} {$customer.city}
-			{if $customer.phone}&nbsp;&raquo;&nbsp; {$customer.phone}{/if}
-			&nbsp;&raquo;&nbsp; {if $customer.balance < 0}<FONT class="red">{/if}{$customer.balance|money_format}{if $customer.balance < 0}</FONT>{/if}
+			<B>{$customerinfo.customername}</B> 
+			&nbsp;&raquo;&nbsp; {$customerinfo.address} &nbsp; {$customerinfo.zip} {$customerinfo.city}
+			{if $customerinfo.phone}&nbsp;&raquo;&nbsp; {$customerinfo.phone}{/if}
+			&nbsp;&raquo;&nbsp; {if $customerinfo.balance < 0}<FONT class="red">{/if}{$customerinfo.balance|money_format}{if $customerinfo.balance < 0}</FONT>{/if}
 		</TD>
 		<TD CLASS="frightu" WIDTH="98%" align="right">
-			{if $customer.groups}<FONT class="red bold">
-			({foreach from=$customer.groups item=item name=groups}{$item.name}{if $smarty.foreach.groups.iteration < sizeof($customer.groups)}, {/if}{/foreach})
+			{if $customerinfo.groups}<FONT class="red bold">
+			({foreach from=$customerinfo.groups item=item name=groups}{$item.name}{if $smarty.foreach.groups.iteration < sizeof($customerinfo.groups)}, {/if}{/foreach})
 			</FONT>{/if}
 		</TD>
 	</TR>
 </TABLE>
+</P>
+{/if}
+{if $customernodes}
+<P>
+{include file="customernodesbox.html"}
 </P>
 {/if}
